# backlog

./: .gitignore  .goreleaser.yaml  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  hugo.toml  main.go  mkdocs.yml  plan.md  pyproject.toml
.backlog/: T01-project_setup_foundation.md  T01.01-initialize_go_module_and_basic_project_structure.md  T01.02-set_up_makefile_with_build_test_lint_and_clean_tar.md  T01.03-create_main.go_with_basic_cli_entry_point.md  T01.04-set_up_go.mod_with_required_dependencies.md  T03-core_data_structures_types.md  T03.01-define_task_struct_with_yaml_frontmatter_support.md  T03.02-implement_taskid_type_with_hierarchical_dot_notati.md  T03.03-create_maybestringarray_type_for_flexible_unmarsha.md  T03.04-define_status_and_priority_enums_with_validation.md  T04-task_storage_system.md  T04.01-define_taskstore_interface.md  T04.02-implement_filetaskstore_with_afero_abstraction.md  T04.03-create_task_file_parsing_(yaml_frontmatter_markdow.md  T04.04-implement_task_id_generation_with_hierarchical_log.md  T05-core_business_logic.md  T05.01-implement_task_creation_with_validation.md  T05.02-build_task_listing_with_filtering_capabilities.md  T05.03-create_task_retrieval_by_id.md  T05.04-implement_task_update_operations.md  T05.05-build_task_search_functionality.md  T05.06-create_task_archival_system.md  T06-cli_commands_interface.md  T06.01-set_up_cobra_cli_framework.md  T06.02-implement_create_command_with_all_flags.md  T06.03-build_list_command_with_filtering_options.md  (+118 more)
(+276 files in other folders)
