[project]
name = "backlog"
version = "0.1.0"
description = "Manage the backlog of your project with just markdown in git."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-autolinks-plugin>=0.4.0",
    "mkdocs-gen-files>=0.5.0",
]
